--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
-  "plugins": ["transform-runtime"],
-  "presets": ["es2015"]
+  "presets": [
+    ["env", {
+      "targets": {
+        "node": "current"
+      }
+    }]
+  ]
 }
