--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dendra-science/task-machine",
-  "version": "0.1.2",
+  "version": "0.2.0",
   "description": "Utility class to execute async tasks against model state.",
   "license": "BSD-2-Clause-FreeBSD",
   "author": "J. Scott Smith <scott@newleafsolutionsinc.com>",
@@ -20,7 +20,7 @@
     "test:watch": "chokidar --initial 'src/**/*.js' 'test/**/*.js' -c 'npm run test:build'"
   },
   "engines": {
-    "node": ">=8.7.0"
+    "node": ">=14.19.2"
   },
   "dependencies": {},
   "devDependencies": {
@@ -36,7 +36,5 @@
     "eslint-plugin-standard": "^3.0.1",
     "mocha": "^5.0.4"
   },
-  "optionalDependencies": {
-    "fsevents": "^1.0.0"
-  }
+  "optionalDependencies": {}
 }
